trait-xml/tests/fail/type_lb_empty.stderr
error: error parsing lifetime parameter: expected lifetime, found `<`. caller: `::trait_xml::trait_xml_parse_type`
  --> tests/fail/type_lb_empty.rs:1:1
   |
1  | / trait_xml::trait_xml! {
2  | |     <trait>
3  | |         <name>Foo</name>
4  | |         <bounds>
...  |
13 | |     </trait>
14 | | }
   | |_^
   |
   = note: this error originates in the macro `$crate::trait_xml_parse_lifetime_bound` which comes from the expansion of the macro `trait_xml::trait_xml` (in Nightly builds, run with -Z macro-backtrace for more info)
